--- a/templates/swift/objects.html
+++ b/templates/swift/objects.html
@@ -17,7 +17,7 @@
         <i class="fa fa-inbox"></i><a href="/containers/"> Containers</a>
     </li>
     <li class="active">
-        <i class="fa fa-file"></i> {{ con_name }}
+        <i class="fa fa-folder-open"></i> {{ con_name }}
     </li>
 {% endblock %}
 
@@ -43,12 +43,12 @@
 
                         {% for i,j in objects %}
                             <tr role='row'>
-                                <td class="col-lg-4">
-                                    <button type="submit" class="btn-link" name='obj_name' value="{{ i.name }}">
+                                <td class="col-lg-2">
+                                    <button type='submit' class="btn btn-link" name='obj_name' value="{{ i.name }}" title="Download Object">
                                         {{ i.name }}
                                     </button>  
                                 </td>
-                                <td class="col-lg-4">{{ j }}</td>
+                                <td class="col-lg-6">{{ j }}</td>
                                 <td>{{ i.last_modified }}</td>                                
                                 <td>{{ i.bytes|filesizeformat }}</td>
                                 <td>
@@ -70,7 +70,7 @@
                                     <div class="form-group">
                                         <div class="row">
                                             <div class='col-lg-8'>
-                                                <label for="1414">Object Name:</label>
+                                                <label for="1414">Object Name</label>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -80,7 +80,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="exampleInputFile">File input</label>
+                                        <label for="exampleInputFile">Object Source</label>
                                         <input type="file" id="exampleInputFile" name='file_name'>
                                     </div>
                                 </div>
